Refactor reward availability checks; improve null handling, enhance cooldown logic, and streamline reward deserialization